--- a/cy1.html
+++ b/cy1.html
@@ -69,7 +69,7 @@
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 <img class="artworkImgs"src = "swatch.png" width="20%"height="20%"/>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "table.png" width="20%"height="20%"/>
+<img class="artworkImgs"src = "Table.png" width="20%"height="20%"/>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 
 
