--- a/cy1.html
+++ b/cy1.html
@@ -56,7 +56,7 @@
   </navbar>
     <main id="main">
       <br />
-<h2 id="cy1Head"><strong>Cycle 1 Projects</strong></h2>
+<h2 id="thingHead"><strong>Cycle 1 Projects</strong></h2>
 <p>In Cycle 1, we did a wide variety of projects. From personalizing our sketchbooks to naming colors to repainting the famous art table, this cycle was full of many fun activities. At the end of the cycle, we had a better understanding of color, and of art overall. The following projects are some of the main activities which we did in this cycle.</p>
 <p><em>Click the links to view each project</em></p>
 </main>
