--- a/swatch.html
+++ b/swatch.html
@@ -34,7 +34,7 @@
 
     <main id='main'>
       <br />
-      <h1>Color Swatch</h1>
+      <h1 id="thingHead">Color Swatch</h1>
       <br />
       <img src = "swatch.png"width="25%"height="25%" />
       <br /><br /><br /><br />
