--- a/handout.html
+++ b/handout.html
@@ -38,7 +38,7 @@
       <br />
       &nbsp; &nbsp; &nbsp;<img src = "Horizontal Research.png"width="50%"height="50%" />
       <br /><br />
-      <p>Medium: Google Slides</p>
+      <p><em>Medium: Google Slides</em></p>
       <a href = "https://docs.google.com/presentation/d/1A07DW1CRJh98aEh_Dmd07pbfIMypb4IH58xiKWMx4qs/comment#slide=id.p" target="_blank"><p>Click this to view the entire presentation.</p></a>
       <br /><br />
       <p>This project was done to help us increase our understanding of colors, as well as for us to exercise our own creativity in observing colors and nothing their characteristics. We had to analyze all kinds of aspects of our color, from things such as its position on the color wheel to its hues, tints and tones. After analyzing all of these aspects, we used our creativity and imagination to name these colors what they reminded us of. I named my color 'Mystic Blue' because the tones reminded me of a mysterious shade of the color blue. Originally, I named it 'Transitional Blue', as it served as a transition from dark to light blue, but finding this name too boring, I renamed the color.</p>
