--- a/sketchbook.html
+++ b/sketchbook.html
@@ -38,7 +38,7 @@
       <br />
       <img src = "sketchbook.jpg"width="20%"height="20%" />
       <br /><br />
-      <p>Medium: Colored Pencil on Paper</p>
+      <p><em>Medium: Colored Pencil on Paper</em></p>
       <br /><br />
       <p>I drew this image on a piece of recycled paper, which I then stapled to my sketchbook. I wanted to put a lot of color into it, so I colored the entire image, while adding things to the image which personalized it. In the center, I drew a hacker. This is because I enjoy studying computers and I thought this would look nice as an image. Around the hacker, I drew several colored lines, which I filled with 0s and 1s. Translated from binary, they are the passcode to my phone. I did this just for fun, and because I thought that it would give it a more genuine and amusing effect. </p>
     </main>
