--- a/swatch.html
+++ b/swatch.html
@@ -38,7 +38,7 @@
       <br />
       <img src = "swatch.png"width="25%"height="25%" />
       <br /><br /><br /><br />
-      <p>Medium: Acrylic on Watercolor Paper</p>
+      <p><em>Medium: Acrylic on Watercolor Paper</em></p>
       <p>In this assignment, we had to try and use our pick of the three primary colors, along with tint, tone and shade, to try and replicate the color which we had named in our Color Research Handout. This was a really fun experience, but frustrating. Over the course of two classes, I mixed red, blue, black and white in different ways to try and replicate my color. After 9 tries, I finally got it. This lesson was a really good experience for learning how colors mix and how we can control that. </p>
     </main>
   <script src = "bootstrap portfolio.js"></script>
