--- a/handout.html
+++ b/handout.html
@@ -34,7 +34,7 @@
 
     <main id='main'>
       <br />
-      <h1 id="thingHead"><strong>Color Research Handout<strong></h1>
+      <h1 id="thingHead"><strong>Color Research Handout</strong></h1>
       <br />
       &nbsp; &nbsp; &nbsp;<img src = "Horizontal Research.png"width="50%"height="50%" />
       <br /><br />
