--- a/sketchbook.html
+++ b/sketchbook.html
@@ -34,7 +34,7 @@
 
     <main id='main'>
       <br />
-      <h1 id="thingHead">Sketchbook Cover</h1>
+      <h1 id="thingHead"><strong>Sketchbook Cover</strong></h1>
       <br />
       <img src = "sketchbook.jpg"width="20%"height="20%" />
       <br /><br />
