--- a/table.html
+++ b/table.html
@@ -34,7 +34,7 @@
 
     <main id='main'>
       <br />
-      <h1 id="thingHead">Table Painting</h1>
+      <h1 id="thingHead"><strong>Table Painting</strong></h1>
       <br />
       <img src = "Table.png"width="25%"height="25%" />
       <br /><br /><br /><br />
