--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
       <br />
       <br  />
       <br />
-      <h1 class="display-1" id="homeHead"><strong>Kabir's Digital Portfolio</strong></h1><br>
+      <h1 class="display-1" id="homeHead">Kabir's Digital Portfolio</h1><br>
   <p class="h2" id="sub">Art Projects 2018-2019</p>
   <br /><br />
   <!--<img src="palette.png" width="35%"height="35%"alt="Fake image"/>-->
