--- a/cy1.html
+++ b/cy1.html
@@ -23,7 +23,7 @@
             <a class="nav-link" id="cy1"href="#">Cycle 1 <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="cy2"href="cy2.html">Cycle 2</a>
+            <a class="nav-link" id="cy2"href="cy2.html"title="HAH I CHANGED THE TITLE">Cycle 2</a>
           </li>
           <!-- Unneccessary for the moment
           <li class="nav-item dropdown">
