--- a/home.html
+++ b/home.html
@@ -60,6 +60,19 @@
   <p class="h2" id="sub">Art Projects 2018-2019</p>
   <br /><br />
   <!--<img src="palette.png" width="35%"height="35%"alt="Fake image"/>-->
+      <select>
+        <optgroup label="Who are you?">
+          <option>Ms. Asha</option>
+          <option>Kabir the Elder</option>
+          <option>Dmitry</option>
+          <option>Vibhav</option>
+          <option>Avani</option>
+          <option>Varnika</option>
+          <option>Nitya</option>
+          <option>Ulani</option>
+        </optgroup>
+      
+      </select>    
   <br /><br />
 </main>
 
