--- a/home.html
+++ b/home.html
@@ -60,7 +60,8 @@
   <p class="h2" id="sub">Art Projects 2018-2019</p>
   <br /><br />
   <!--<img src="palette.png" width="35%"height="35%"alt="Fake image"/>-->
-      <select>
+      <label for="menu">Who are You?</label>
+      <select id="menu">
         <optgroup label="Who are you?">
           <option>Ms. Asha</option>
           <option>Kabir the Elder</option>
