--- a/home.html
+++ b/home.html
@@ -60,6 +60,7 @@
   <p class="h2" id="sub">Art Projects 2018-2019</p>
   <br /><br />
   <!--<img src="palette.png" width="35%"height="35%"alt="Fake image"/>-->
+      <form action="cy1.html" method="post">
       <label for="menu"><strong>Who are You?</strong></label><br>
       <select id="menu">
         <optgroup  class="options" label="Who are you?">
@@ -73,7 +74,8 @@
           <option class="options">Ulani</option>
         </optgroup>
       
-      </select>    
+      </select>  
+   </form>     
   <br /><br />
 </main>
 
