--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
       <h1 class="display-1" id="homeHead"><strong>Kabir's Digital Portfolio</strong></h1><br>
   <p class="h2" id="sub">Art Projects 2018-2019</p>
   <br /><br />
-  <!--<img src="palette.png" width="35%"height="35%"alt="Fake image"/>-->
+  <!--<img src="palette.png" width="35%"height="35%"alt="Fake image"/>
       <form action="cy1.html" method="post">
       <label for="menu"><strong>Who are You?</strong></label><br>
       <select id="menu">
@@ -75,7 +75,7 @@
         </optgroup>
       
       </select>  
-   </form>     
+   </form>     -->
   <br /><br />
 </main>
 
