--- a/cy4.html
+++ b/cy4.html
@@ -52,7 +52,7 @@
   </nav>
   </navbar>
     <main id="main">
-      <h1>Cycle 4 Projects</h1>
+      <h1>Cycle 4 Artwork</h1>
 <h1>This page is in process of being built</h1>
 </main>
 
