--- a/biome.html
+++ b/biome.html
@@ -52,7 +52,7 @@
   </nav>
   </navbar>
     <main id="main">
-      <h1>Biome Projects</h1>
+      <h1>Biome Artwork</h1>
 <h1>This page is in process of being built</h1>
 </main>
 
