--- a/biome.html
+++ b/biome.html
@@ -45,7 +45,7 @@
     <li class="nav-item">
         <a class="nav-link" id="cy5" href="cy5.html">Cycle 5</a>
     <li class="nav-item">
-        <a class="nav-link" id="biome" href="#">Biome Projects</a>
+        <a class="nav-link" id="biome" href="#">Biome Trips</a>
     </li>
   </ul>
   </div>
