--- a/cy2.html
+++ b/cy2.html
@@ -52,8 +52,27 @@
   </nav>
   </navbar>
     <main id="main">
-        <h1>Cycle 2 Artwork</h1>
-        <h1>This page is in process of being built</h1>
+        <!--<h1>Cycle 2 Artwork</h1>
+        <h1>This page is in process of being built</h1>-->
+
+ <h2 id="thingHead"><strong>Cycle 1 Artwork</strong></h2>
+<p>In Cycle 1, we did a wide variety of projects. From personalizing our sketchbooks to naming colors to repainting the famous art table, this cycle was full of many fun activities. At the end of the cycle, we had a better understanding of color, and of art overall. The following projects are some of the main activities which we did in this cycle.</p>
+<p><em>Click the links to view each project</em></p>
+</main>
+<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="sketchbook.html"><strong>Sketchbook Cover</strong></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="handout.html"><strong>Color Research Handout</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="swatch.html"><strong>Color Swatch</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="table.html"><strong>Table Painting</strong></a></p>
+<br />
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+<img class="artworkImgs"src = "sketchbook.jpg" width="20%"height="20%"/>
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+<img class="artworkImgs"src = "Color Research 3.png" height="10%"width="20%"/>
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+<img class="artworkImgs"src = "swatch.png" width="20%"height="20%"/>
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+<img class="artworkImgs"src = "Table.png" width="20%"height="20%"/>
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+
+
+<br />
 
   <!--<h2>Cycle 2 Projects</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
