--- a/cy2.html
+++ b/cy2.html
@@ -51,6 +51,7 @@
   </div>
   </nav>
   </navbar>
+    <article>
     <main id="main">
         <!--<h1>Cycle 2 Artwork</h1>
         <h1>This page is in process of being built</h1>-->
@@ -58,6 +59,7 @@
  <h2 id="thingHead"><strong>Cycle 1 Artwork</strong></h2>
 <p>In Cycle 1, we did a wide variety of projects. From personalizing our sketchbooks to naming colors to repainting the famous art table, this cycle was full of many fun activities. At the end of the cycle, we had a better understanding of color, and of art overall. The following projects are some of the main activities which we did in this cycle.</p>
 <p><em>Click the links to view each project</em></p>
+</main>
 <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="sketchbook.html"><strong>Sketchbook Cover</strong></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="handout.html"><strong>Color Research Handout</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="swatch.html"><strong>Color Swatch</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="table.html"><strong>Table Painting</strong></a></p>
 <br />
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
@@ -72,9 +74,9 @@
 
 
 <br />
-    </main>
+</article>
 <script>
-  const main = document.querySelector('#main');
+  const text = document.querySelector('article');
 
 </script>
 <script src = "bootstrap portfolio.js"></script>
