--- a/cy2.html
+++ b/cy2.html
@@ -63,13 +63,13 @@
 <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="sketchbook.html"><strong>Project 1</strong></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="handout.html"><strong>Project 2</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="swatch.html"><strong>Project 3</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="table.html"><strong>Project 4</strong></a></p>
 <br />
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "http://placeimg.com/640/480/nature" width="20%"height="20%"/>
+<img class="artworkImgs"src = "http://placeimg.com/640/480/animals" width="20%"height="20%"/>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "http://placeimg.com/640/480/nature" height="10%"width="20%"/>
+<img class="artworkImgs"src = "http://placeimg.com/640/480/animals" height="10%"width="20%"/>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "http://placeimg.com/640/480/nature" width="20%"height="20%"/>
+<img class="artworkImgs"src = "http://placeimg.com/640/480/animals" width="20%"height="20%"/>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "http://placeimg.com/640/480/nature" width="20%"height="20%"/>
+<img class="artworkImgs"src = "http://placeimg.com/640/480/animals" width="20%"height="20%"/>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 
 
