--- a/cy2.html
+++ b/cy2.html
@@ -53,9 +53,10 @@
   </navbar>
     <article>
     <main id="main">
-        <!--<h1>Cycle 2 Artwork</h1>
-        <h1>This page is in process of being built</h1>-->
-<br>
+        <h1>Cycle 2 Artwork</h1>
+        <h1>This page is in process of being built</h1>
+      <button id="viewAll">Click to view current edits to this page</button>
+<br><!--
  <h2 id="thingHead"><strong>Cycle 2 Artwork</strong></h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 <p><em>Click the links to view each project</em></p>
@@ -73,7 +74,7 @@
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 
 
-<br />
+<br />-->
 </article>
 <script>
   const text = document.querySelector('article');
