--- a/cy2.html
+++ b/cy2.html
@@ -54,7 +54,7 @@
     <article>
     <main id="main">
         <h1>Cycle 2 Artwork</h1>
-        <h1>This page is in process of being built</h1>
+        <h1>This page is in process of being built</h1><br>
       <button id="viewAll">Click to view current edits to this page</button>
 <br><!--
  <h2 id="thingHead"><strong>Cycle 2 Artwork</strong></h2>
@@ -78,6 +78,11 @@
 </article>
 <script>
   const text = document.querySelector('article');
+  const viewAll = document.getElementById('viewAll');
+  
+  viewAll.addEventListener('click', ()=> {
+  text.innerHTML = 'Harumption';
+  })
 
 </script>
 <script src = "bootstrap portfolio.js"></script>
