--- a/cy2.html
+++ b/cy2.html
@@ -77,11 +77,12 @@
 <br />-->
 </article>
 <script>
-  const text = document.querySelector('article');
   const viewAll = document.getElementById('viewAll');
   
   viewAll.addEventListener('click', ()=> {
-  document.write('<main id="main"><h2 id="thingHead"><strong>Cycle 2 Artwork</strong></h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p><p><em>Click the links to view each project</em></p></main><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="sketchbook.html"><strong>Project 1</strong></a> &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="handout.html"><strong>Project 2</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="swatch.html"><strong>Project 3</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="table.html"><strong>Project 4</strong></a></p><br />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img class="artworkImgs"src = "http://placeimg.com/640/480/animals" width="20%"height="20%"/>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img class="artworkImgs"src = "http://placeimg.com/640/480/animals" height="10%"width="20%"/>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img class="artworkImgs"src = "http://placeimg.com/640/480/animals" width="20%"height="20%"/>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img class="artworkImgs"src = "http://placeimg.com/640/480/animals" width="20%"height="20%"/>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;')
+    const text = document.querySelector('article');
+    let h2 = article.appendChild('h2');
+    h2.style.color = "red";
   })
 
 </script>
