--- a/cy2.html
+++ b/cy2.html
@@ -81,7 +81,8 @@
   
   viewAll.addEventListener('click', ()=> {
     const text = document.querySelector('article');
-    let h2 = text.appendChild('h2');
+    let h2 = document.createElement('h2')
+    text.appendChild('h2');
     h2.style.color = "red";
   })
 
