--- a/biome.html
+++ b/biome.html
@@ -54,7 +54,7 @@
     <main id="main">
       <h1>Biome Artwork</h1>
 <h1>This page is in process of being built</h1>
-<img src = "timeline.jpg"alt="timeline" />
+<img src = "Timeline.jpg"alt="timeline" />
 </main>
 <!--False-->
 <script src = "bootstrap portfolio.js"></script>
