--- a/biome.html
+++ b/biome.html
@@ -45,15 +45,14 @@
     <li class="nav-item">
         <a class="nav-link" id="cy5" href="cy5.html">Cycle 5</a>
     <li class="nav-item">
-        <a class="nav-link" id="biome" href="#">Biome Trips</a>
+        <a class="nav-link" id="biome" href="#">Biome Projects</a>
     </li>
   </ul>
   </div>
   </nav>
   </navbar>
     <main id="main">
-      <h1>Biome Artwork</h1>
-<h1>This page is in process of being built</h1>
+      <h2 id="thingHead">Biome Artwork</h1>
 <img src = "Timeline.jpg"alt="timeline" />
 </main>
 <!--False-->
