--- a/biome.html
+++ b/biome.html
@@ -52,9 +52,23 @@
   </nav>
   </navbar>
     <main id="main">
-      <h2 id="thingHead">Biome Artwork</h1>
-<img src = "Timeline.jpg"alt="timeline" />
+      <br />
+<h2 id="thingHead"><strong>Cycle 1 Artwork</strong></h2>
+<p>In Cycle 1, we did a wide variety of projects. From personalizing our sketchbooks to naming colors to repainting the famous art table, this cycle was full of many fun activities. At the end of the cycle, we had a better understanding of color, and of art overall. The following projects are some of the main activities which we did in this cycle.</p>
+<p><em>Click the links to view each project</em></p>
 </main>
+<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="sketchbook.html"><strong>Sketchbook Cover</strong></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="handout.html"><strong>Color Research Handout</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="swatch.html"><strong>Color Swatch</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="table.html"><strong>Table Painting</strong></a></p>
+<br />
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+<img src = "Timeline.jpg"alt="timeline" />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+<img class="artworkImgs"src = "Color Research 3.png" height="10%"width="20%"/>
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+<img class="artworkImgs"src = "swatch.png" width="20%"height="20%"/>
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+<img class="artworkImgs"src = "Table.png" width="20%"height="20%"/>
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+</main>
+
 <!--False-->
 <script src = "bootstrap portfolio.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
