--- a/biome.html
+++ b/biome.html
@@ -53,20 +53,14 @@
   </navbar>
     <main id="main">
       <br />
-<h2 id="thingHead"><strong>Cycle 1 Artwork</strong></h2>
-<p>In Cycle 1, we did a wide variety of projects. From personalizing our sketchbooks to naming colors to repainting the famous art table, this cycle was full of many fun activities. At the end of the cycle, we had a better understanding of color, and of art overall. The following projects are some of the main activities which we did in this cycle.</p>
+<h2 id="thingHead"><strong>Biome Artwork</strong></h2>
+<p>Every year, we have two biomes trips, one being the Mini Biome Trip and one being the actual Biome Trip. These are both part of two of the year's biggest assignments, being the Mini Biome Report and the Biome Report. During these trips, we get art assignments which we include in the reports, related to something we did on the trip. From learning about Maria Montessori's Great Lesson to many other things, we always had fun art projects on these trips.</p>
 <p><em>Click the links to view each project</em></p>
 </main>
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="sketchbook.html"><strong>Sketchbook Cover</strong></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="handout.html"><strong>Color Research Handout</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="swatch.html"><strong>Color Swatch</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="table.html"><strong>Table Painting</strong></a></p>
+<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="visual.html"><strong>Great Lesson Visual</strong></a></p>
 <br />
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 <img src = "Timeline.jpg"alt="timeline" />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "Color Research 3.png" height="10%"width="20%"/>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "swatch.png" width="20%"height="20%"/>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "Table.png" width="20%"height="20%"/>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 </main>
 
 <!--False-->
