--- a/visual.html
+++ b/visual.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Color Research Handout</title>
+    <title>Great Lesson Visual</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel = stylesheet href = "portfolio.css" />
   </head>
@@ -34,15 +34,14 @@
 
     <main id='main'>
       <br />
-      <h1>Color Research Handout</h1>
+      <h1>Great Lesson Visual</h1>
       <br />
-      &nbsp; &nbsp; &nbsp;<img src = "Horizontal Research.png"width="50%"height="50%" />
+      &nbsp; &nbsp; &nbsp;<img src = "Timeline.jpg"width="50%"height="50%" />
       <br /><br />
-      <p>Medium: Google Slides</p>
+      <p>Medium: Colored Pencil on Paper</p>
       <br /><br />
-      <p>This project was done to help us increase our understanding of colors, as well as for us to exercise our own creativity in observing colors and nothing their characteristics. We had to analyze all kinds of aspects of our color, from things such as its position on the color wheel to its hues, tints and tones. After analyzing all of these aspects, we used our creativity and imagination to name these colors what they reminded us of. I named my color 'Mystic Blue' because the tones reminded me of a mysterious shade of the color blue. Originally, I named it 'Transitional Blue', as it served as a transition from dark to light blue, but finding this name too boring, I renamed the color.</p>
+      <p>TUONG OT</p>
       <br />
-      <a href = "https://docs.google.com/presentation/d/1A07DW1CRJh98aEh_Dmd07pbfIMypb4IH58xiKWMx4qs/comment#slide=id.p" target="_blank"><p>Click this to view the entire presentation.</p></a>
     </main>
   <script src = "bootstrap portfolio.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
