--- a/visual.html
+++ b/visual.html
@@ -36,7 +36,7 @@
       <br />
       <h1>Great Lesson Visual</h1>
       <br />
-      &nbsp; &nbsp; &nbsp;<img src = "Timeline.jpg"width="50%"height="50%" />
+      &nbsp; &nbsp; &nbsp;<img src = "Timeline 2.jpg"width="20%"height="20%" />
       <br /><br />
       <p>Medium: Colored Pencil on Paper</p>
       <br /><br />
