--- a/visual.html
+++ b/visual.html
@@ -9,23 +9,23 @@
   <body>
     <navbar id='navbar'>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="cy1.html">Cycle 1 Artwork</a>
+        <a class="navbar-brand" href="biome.html">Biome Projects</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="home"href="sketchbook.html">Sketchbook Cover<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="biome"href="#">Great Lesson Visual<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy1"href="#">Color Research Handout <span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy1"href="#">Project 2 <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="cy2"href="swatch.html">Color Swatch</a>
+              <a class="nav-link" id="cy2"href="#">Project 3</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" id="cy3" href="table.html">Table Painting</a>
+              <a class="nav-link disabled" id="cy3" href="#">Project 4</a>
             </li>
           </ul>
       </div>
@@ -40,7 +40,7 @@
       <br /><br />
       <p>Medium: Colored Pencil on Paper</p>
       <br /><br />
-      <p>TUONG OT</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       <br />
     </main>
   <script src = "bootstrap portfolio.js"></script>
