--- a/visual.html
+++ b/visual.html
@@ -34,7 +34,7 @@
 
     <main id='main'>
       <br />
-      <h1>Great Lesson Visual</h1>
+      <h1 id="thingHead">Great Lesson Visual</h1>
       <br />
       &nbsp; &nbsp; &nbsp;<img src = "Timeline 2.jpg"width="30%"height="30%" />
       <br /><br />
