--- a/visual.html
+++ b/visual.html
@@ -38,7 +38,7 @@
       <br />
       &nbsp; &nbsp; &nbsp;<img src = "Timeline 2.jpg"width="30%"height="30%" />
       <br /><br />
-      <p>Medium: Colored Pencil on Paper</p>
+      <p><em>Medium: Colored Pencil on Paper</em></p>
       <br /><br />
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       <br />
