--- a/sketchbook.html
+++ b/sketchbook.html
@@ -7,25 +7,25 @@
     <link rel = stylesheet href = "portfolio.css" />
   </head>
   <body>
-    <navbar id='navbar'>
+   <navbar id='navbar'>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="cy1.html">Cycle 1 Artwork</a>
+        <a class="navbar-brand" id="cyOne"href="cy1.html">Cycle 1 Artwork</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="home"href="#">Sketchbook Cover<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="sketch"href="#">Sketchbook Cover<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy1"href="handout.html">Color Research Handout <span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="hand"href="handout.html">Color Research Handout <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="cy2"href="swatch.html">Color Swatch</a>
+              <a class="nav-link" id="swatch"href="swatch.html">Color Swatch</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" id="cy3" href="table.html">Table Painting</a>
+              <a class="nav-link disabled" id="table" href="table.html">Table Painting</a>
             </li>
           </ul>
       </div>
