--- a/handout.html
+++ b/handout.html
@@ -16,10 +16,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="sketch"href="#">Sketchbook Cover<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="sketch"href="sketchbook.html">Sketchbook Cover<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="hand"href="handout.html">Color Research Handout <span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="hand"href="#">Color Research Handout <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="swatch"href="swatch.html">Color Swatch</a>
@@ -43,7 +43,7 @@
       <br /><br />
       <p>This project was done to help us increase our understanding of colors, as well as for us to exercise our own creativity in observing colors and nothing their characteristics. We had to analyze all kinds of aspects of our color, from things such as its position on the color wheel to its hues, tints and tones. After analyzing all of these aspects, we used our creativity and imagination to name these colors what they reminded us of. I named my color 'Mystic Blue' because the tones reminded me of a mysterious shade of the color blue. Originally, I named it 'Transitional Blue', as it served as a transition from dark to light blue, but finding this name too boring, I renamed the color.</p>
     </main>
-  <script src = "bootstrap portfolio.js"></script>
+  <script src = "cy1.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
