--- a/swatch.html
+++ b/swatch.html
@@ -16,13 +16,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="sketch"href="#">Sketchbook Cover<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="sketch"href="sketchbook.html">Sketchbook Cover<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" id="hand"href="handout.html">Color Research Handout <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="swatch"href="swatch.html">Color Swatch</a>
+              <a class="nav-link" id="swatch"href="#">Color Swatch</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" id="table" href="table.html">Table Painting</a>
@@ -41,7 +41,7 @@
       <p><em>Medium: Acrylic on Watercolor Paper</em></p>
       <p>In this assignment, we had to try and use our pick of the three primary colors, along with tint, tone and shade, to try and replicate the color which we had named in our Color Research Handout. This was a really fun experience, but frustrating. Over the course of two classes, I mixed red, blue, black and white in different ways to try and replicate my color. After 9 tries, I finally got it. This lesson was a really good experience for learning how colors mix and how we can control that. </p>
     </main>
-  <script src = "bootstrap portfolio.js"></script>
+  <script src = "cy1.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
