--- a/cy1.html
+++ b/cy1.html
@@ -63,7 +63,7 @@
 <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="sketchbook.html"><strong>Sketchbook Cover</strong></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="handout.html"><strong>Color Research Handout</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="swatch.html"><strong>Color Swatch</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="table.html"><strong>Table Painting</strong></a></p>
 <br />
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "Sketchbook 3.jpg" width="20%"height="20%"/>
+<img class="artworkImgs"src = "Sketchbook 3.png" width="20%"height="20%"/>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 <img class="artworkImgs"src = "Color Research 3.png" height="10%"width="18%"/>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
