--- a/sketchbook.html
+++ b/sketchbook.html
@@ -36,7 +36,7 @@
       <br />
       <h1 id="thingHead"><strong>Sketchbook Cover</strong></h1>
       <br />
-      <img src = "Sketchbook 3.jpg"width="20%"height="20%" />
+      <img src = "Sketchbook 3.png"width="20%"height="20%" />
       <br /><br />
       <p><em>Medium: Colored Pencil on Paper</em></p>
       <br /><br />
