--- a/cy1.html
+++ b/cy1.html
@@ -19,7 +19,7 @@
           <li class="nav-item active">
             <a class="nav-link" id="home"href="home.html"> Home<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item active"> <!--lol-->
             <a class="nav-link" id="cy1"href="#">Cycle 1 <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
