--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <title>Art Digital Portfolio</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel = stylesheet href = "portfolio.css" />
-  <link rel="shortcut icon" type="image/x-icon" href="palette.ico">
+  <link type="image/png" rel="icon" href="palette.ico">
 </head>
 <body id = "body">
   <navbar id='navbar'>
