--- a/visual.html
+++ b/visual.html
@@ -40,7 +40,7 @@
       <br /><br />
       <p><em>Medium: Colored Pencil on Paper</em></p>
       <br /><br />
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+      <p>This was a project which we did for our Mini-Biome Report. While on our trip, we learned about Maria Montessori's 'Great Lesson', which showed how infinitesimal humans are in the scope of Earth's history. We were then required to write a response and make a drawing of this. My drawing depicts the past, and the evolution of Earth, as well as the tiny sliver of time which is the present, while also showing the expanding future which lies ahead for us. This was a good project and I learned a lot from it.</p>
       <br />
     </main>
   <script src = "bootstrap portfolio.js"></script>
