--- a/sculpture.html
+++ b/sculpture.html
@@ -19,7 +19,7 @@
               <a class="nav-link" id="home"href="#">Child At Play Sculpture<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy1"href="handout.html">Child At Play Rough Drawing<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy1"href="draft.html">Child At Play Rough Drawing<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
