--- a/draft.html
+++ b/draft.html
@@ -19,7 +19,7 @@
               <a class="nav-link" id="home"href="#">Child At Play Sculpture<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy1"href="handout.html">Child At Play Rough Drawing<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy1"href="sculpture.html">Child At Play Rough Drawing<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
@@ -28,7 +28,7 @@
 
     <main id='main'>
       <br />
-      <h1><strong>Sculpture Draft Image<strong></h1>
+      <h1><strong>Sculpture Draft Image</strong></h1>
       <br />
       <img src = "child_at_play.png"width="20%"height="20%" />
       <br /><br />
