--- a/draft.html
+++ b/draft.html
@@ -32,7 +32,7 @@
       <br />
       <img src = "child_at_play.png"width="20%"height="20%" />
       <br /><br />
-      <p>Medium: Pencil and Colored Pencil on Newsprint Paper</p>
+      <em>Medium: Pencil and Colored Pencil on Newsprint Paper</em>
       <br /><br />
         <p>This was our rough drawing for the <a href = 'sculpture.html'>Child at Play Sculpture</a>. It started off as just a drawing of a gender-neutral child standing in an apparent playing pose, but towards the end of the project, when the time came to paint the figure, we added color to the drawing as a kind of reference to how we would design the actual sculpture.</p>
     </main>
