--- a/sculpture.html
+++ b/sculpture.html
@@ -28,11 +28,11 @@
 
     <main id='main'>
       <br />
-      <h1><strong>Child At Play Sculpture<strong></h1>
+      <h1><strong>Child At Play Sculpture</strong></h1>
       <br />
       <img src = "sculpture.png"width="20%"height="20%" />
       <br /><br />
-      <p>Mediums: Saran Wrap, Tape, Mod Podge, Water, Paper Towel, Newspaper, Glue, Paint</p>
+      <em>Mediums: Saran Wrap, Tape, Mod Podge, Water, Paper Towel, Newspaper, Glue, Paint</em>
       <br /><br />
       <p>This was a group project which we worked on throughout the cycle. It started as just <a href = 'draft.html'>a plan on a piece of paper</a>, which displayed a child in an apparent state of play. The final result was more like a corpse, but it was still a good effort. We modeled multiple people's body parts in the process, so that the group element would increase even more. We started by first creating and combining body parts with saran wrap and filling them with newspaper. We then combined mod podge, a glue-like substance, as well as some water, used it as papier-mâché to coat the sculpture, and finalized it with a layer of glue and several different colors. The result is the image below.</p>
     </main>
