--- a/draft.html
+++ b/draft.html
@@ -30,7 +30,7 @@
       <br />
       <h1><strong>Sculpture Draft Image</strong></h1>
       <br />
-      <img src = "child_at_play.png"width="20%"height="20%" />
+      <img src = "Child_at_play.png"width="20%"height="20%" />
       <br /><br />
       <em>Medium: Pencil and Colored Pencil on Newsprint Paper</em>
       <br /><br />
