--- a/cy2.html
+++ b/cy2.html
@@ -24,19 +24,6 @@
           <li class="nav-item">
             <a class="nav-link" id="cy2"href="cy2.html">Cycle 2</a>
           </li>
-          <!-- Unneccessary for the moment
-          <li class="nav-item dropdown">
-          <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Something else here</a>
-      </div>
-    </li>
-  -->
   <li class="nav-item">
     <a class="nav-link disabled" id="cy3" href="cy3.html">Cycle 3</a>
   </li>
@@ -64,9 +51,9 @@
 </p>
 <br />
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "sculpture.png" width="20%"height="20%"/>
+<img class="artworkImgs"src = "Sculpture.png" width="20%"height="20%"rotate='90'/>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "child_at_play.png" height="10%"width="20%"/>
+<img class="artworkImgs"src = "Child_at_play.png" height="10%"width="20%"/>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 
 <br />
