--- a/cy2.html
+++ b/cy2.html
@@ -19,10 +19,10 @@
             <a class="nav-link" id="home"href="home.html"> Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" id="cy1"href="#">Cycle 1 <span class="sr-only">(current)</span></a>
+            <a class="nav-link" id="cy1"href="cy1.html">Cycle 1 <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="cy2"href="cy2.html">Cycle 2</a>
+            <a class="nav-link" id="cy2"href="#">Cycle 2</a>
           </li>
   <li class="nav-item">
     <a class="nav-link disabled" id="cy3" href="cy3.html">Cycle 3</a>
@@ -51,9 +51,9 @@
 </p>
 <br />
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "Sculpture.png" width="20%"height="20%"rotate='90'/>
+<img class="artworkImgs"src = "Sculpture.png" width="20%"height="20%"rotate="90"/>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "Child_at_play.png" height="10%"width="20%"/>
+<img class="artworkImgs"src = "Child_at_play.png" height="50%"width="20%"/>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 
 <br />
