--- a/cy2.html
+++ b/cy2.html
@@ -42,7 +42,7 @@
   </navbar>
     <main id="main">
       <br />
-<h2 id="cy1Head"><strong>Cycle 2 Projects</strong></h2>
+<h2 id="thingHead"><strong>Cycle 2 Projects</strong></h2>
 <p>In Cycle 2, our projects were mainly centered around Classical Art. We studied the Archaic, Classical and Hellenistic art styles of Ancient Greece, as well as aspects of Roman art. Our main project was to create a sculpture which showed aspects of these art forms, but we spent much of the time watching videos and taking notes about this. Overall, it proved to be a fascinating topic, which merged both history and art.</p>
 <p><em>Click the links to view each project</em></p>
 </main>
