--- a/cy2.html
+++ b/cy2.html
@@ -51,7 +51,7 @@
 </p>
 <br />
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "Sculpture.png" width="20%"height="20%"rotate="90"/>
+<img id='sculpture' class="artworkImgs"src = "Sculpture.png" width="20%"height="20%"/>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 <img class="artworkImgs"src = "Child_at_play.png" height="50%"width="20%"/>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
