--- a/sculpture.html
+++ b/sculpture.html
@@ -28,7 +28,7 @@
 
     <main id='main'>
       <br />
-      <h1><strong>Child At Play Sculpture</strong></h1>
+      <h1 id='thingHead'><strong>Child At Play Sculpture</strong></h1>
       <br />
       <img src = "Sculpture.png"width="20%"height="20%"rotate='90' />
       <br /><br />
