--- a/draft.html
+++ b/draft.html
@@ -28,7 +28,7 @@
 
     <main id='main'>
       <br />
-      <h1><strong>Sculpture Draft Image</strong></h1>
+      <h1 id='thingHead'><strong>Sculpture Draft Image</strong></h1>
       <br />
       <img src = "Child_at_play.png"width="20%"height="20%" />
       <br /><br />
