--- a/sculpture.html
+++ b/sculpture.html
@@ -30,7 +30,7 @@
       <br />
       <h1 id='thingHead'><strong>Child At Play Sculpture</strong></h1>
       <br />
-      <img src = "Sculpture.png"width="20%"height="20%"rotate='90' />
+      <img id = 'sculpture' src = "Sculpture.png"width="20%"height="20%"rotate='90' />
       <br /><br />
       <em>Mediums: Saran Wrap, Tape, Mod Podge, Water, Paper Towel, Newspaper, Glue, Paint</em>
       <br /><br />
