--- a/cy2.html
+++ b/cy2.html
@@ -50,6 +50,7 @@
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="draft.html"><strong>Child At Play Draft</strong></a>
 </p>
 <br />
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 <img id='sculpture' class="artworkImgs"src = "Sculpture.png" width="30%"height="40%"/>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
