--- a/draft.html
+++ b/draft.html
@@ -19,7 +19,7 @@
               <a class="nav-link" id="home"href="sculpture.html">Child At Play Sculpture<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy1"href="sculpture.html">Child At Play Rough Drawing<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy1"href="#">Child At Play Rough Drawing<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
