--- a/sculpture.html
+++ b/sculpture.html
@@ -30,11 +30,12 @@
       <br />
       <h1 id='thingHead'><strong>Child At Play Sculpture</strong></h1>
       <br /><br /><br />
+      <img id = 'sculpture2' src = "Sculpture.jpg"width="30%"height="30%"/>
       <img id = 'sculpture' src = "Sculpture.png"width="30%"height="30%"rotate='90' />
       <br /><br /><br /><br />
       <em>Mediums: Saran Wrap, Tape, Mod Podge, Water, Paper Towel, Newspaper, Glue, Paint</em>
       <br /><br />
-      <p>This was a group project which we worked on throughout the cycle. It started as just <a href = 'draft.html'>a plan on a piece of paper</a>, which displayed a child in an apparent state of play. The final result was more like a corpse, but it was still a good effort. We modeled multiple people's body parts in the process, so that the group element would increase even more. We started by first creating and combining body parts with saran wrap and filling them with newspaper. We then combined mod podge, a glue-like substance, as well as some water, used it as papier-mâché to coat the sculpture, and finalized it with a layer of glue and several different colors. The result is the above image.</p>
+      <p>This was a group project which we worked on throughout the cycle. It started as just <a href = 'draft.html'>a plan on a piece of paper</a>, which displayed a child in an apparent state of play. The final result was more like a corpse, but it was still a good effort. We modeled multiple people's body parts in the process, so that the group element would increase even more. We started by first creating and combining body parts with saran wrap and filling them with newspaper. We then combined mod podge, a glue-like substance, as well as some water, used it as papier-mâché to coat the sculpture, and finalized it with a layer of glue and several different colors. The process can be seen throughout the above images. The result is the final image.</p>
     </main>
   <script src = "bootstrap portfolio.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
