--- a/sculpture.html
+++ b/sculpture.html
@@ -32,6 +32,7 @@
       <br /><br />
       <img id = 'sculpture2' src = "Sculpture.jpg"width="25%"height="14%"/>
       <img id = 'sculpture' src = "Sculpture.png"width="30%"height="30%"rotate='90' />
+      <img id = 'sculpture3' src = "Final_Sculpture.png"width="25%"height="14%"/>
       <br /><br /><br />
       <em>Mediums: Saran Wrap, Tape, Mod Podge, Water, Paper Towel, Newspaper, Glue, Paint</em>
       <br /><br />
